# SWEBenchBenchmarkService

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cdk.context.json  cdk.json  debug.py  docker-compose.yml  main.py  patch.diff  pyproject.toml  setup.sh
.github/workflows/: cbs-latest-check.yaml  lockfile-check.yaml  style.yaml  test.yaml  typecheck.yaml  update-lockfile.yaml  valkyrie-smoke.yaml
infra/: app.py
src/: evaluation.py  logger.py  models.py  types.py  utils.py
src/benchmark_service/: __init__.py  app.py  base.py  schemas.py
src/setup/: __main__.py
src/swebench_service/: __init__.py  benchmark_service.py  dataset.py  eval_resume.py  evaluation.py  schemas.py  test_spec.py  utils.py  vals_index.json
swebench_utils/: __init__.py  evaluation.py
tests/: __init__.py  conftest.py  utils.py
tests/integration/: test_daytona.py  test_end_to_end.py  test_setup.py
tests/unit/: test_dataset.py  test_endpoints.py  test_eval_resume.py  test_fast_api.py  test_registry.py  test_run_command.py  test_sandbox_interface.py
