[project]
name = "swebench-benchmark-service"
version = "0.1.0"
description = "SWE-bench benchmark service"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "daytona>=0.143.0",
    "fastapi[standard]>=0.127.1",
    "datasets>=4.4.2",
    "swebench==4.1.0",
    "pandas<3.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark_service"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
venvPath="."
venv=".venv"
typeCheckingMode = "strict"
reportExplicitAny = false
reportAny = false
reportMissingTypeStubs = false
enableTypeIgnoreComments = true
exclude = [".*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "experimental: marks tests as experimental (deselect with '-m \"not experimental\"')"
]
addopts = "-v -m 'not experimental'"
